attempt at deleting and creating a user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,10 @@
 			<i class="icon user"></i>
 			Add User
 		</button>
+		<button class="ui basic green button">
+			<i class="icon user"></i>
+			List Users
+		</button>
 	</section>
 
     <%- include partials/addUser.ejs %>
